# carbon-vibe

./: CLAUDE.md  Cargo.toml  DEVELOPMENT_LOG.md  JOURNAL.md  README.md
src/: main.rs
