[package]
name = "carbon-vibe"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "current"
path = "src/bin/current.rs"

[[bin]]
name = "history"
path = "src/bin/history.rs"

[[bin]]
name = "web"
path = "src/bin/web.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
leptos = { version = "0.6", features = ["csr"] }
leptos_axum = "0.6"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
wasm-bindgen = "0.2"
